@@ -18,6 +18,7 @@
 package art.output;
 
 import java.util.Date;
+import org.apache.commons.codec.binary.Base64;
 import org.owasp.encoder.Encode;
 
 /**
@@ -147,6 +148,16 @@ public class HtmlGridOutput extends StandardOutput {
 
 		out.println("<td style='text-align: left' sorttable_customkey='"
 				+ sortValue + "'>" + escapedFormattedValue + "</td>");
+	}
+	
+	@Override
+	public void addCellImage(byte[] binaryData) {
+		if (binaryData == null) {
+			out.println("<td></td>");
+		} else {
+			String stringData = Base64.encodeBase64String(binaryData);
+			out.println("<td style='text-align: center'><img src='data:image/png;base64," + stringData + "'></td>");
+		}
 	}
 
 	@Override
