@@ -233,6 +233,24 @@ public class XlsxOutput extends StandardOutput {
 	}
 
 	@Override
+	public void addCellImage(byte[] binaryData) {
+		cell = row.createCell(cellNumber++);
+
+		if (binaryData != null) {
+			//https://stackoverflow.com/questions/33712621/how-put-a-image-in-a-cell-of-excel-java
+			//https://poi.apache.org/spreadsheet/quick-guide.html#Images
+			int pictureIdx = wb.addPicture(binaryData, Workbook.PICTURE_TYPE_PNG);
+			CreationHelper helper = wb.getCreationHelper();
+			Drawing drawing = sheet.createDrawingPatriarch();
+			ClientAnchor anchor = helper.createClientAnchor();
+			anchor.setCol1(cellNumber - 1);
+			anchor.setRow1(currentRow - 1);
+			Picture pict = drawing.createPicture(anchor, pictureIdx);
+			pict.resize();
+		}
+	}
+
+	@Override
 	public void newRow() {
 		row = sheet.createRow(currentRow++);
 		cellNumber = 0;
